# Chaos-2010

./: .bzrignore  BoardWidget.lhs  Chaos2010.lhs  ChaosDB.lhs  ChaosTypes.lhs  Conf.lhs  DBAdmin.lhs  DBTextView.lhs  FileAdmin.lhs  FixHaskellDB.lhs  GtkUtils.lhs  INSTALL  Logging.lhs  MyTextView.lhs  Paths_chaos.lhs  ProcessProfile.lhs  README  SetupUtils.lhs  SimpleTest.lhs  SoundLib.lhs  Tests.lhs  ThreadingUtils.lhs  TreeThing.lhs  Utils.lhs  chaos.cabal  chaos.config  chaos.lhs  chaos2010.cabal  client.sql  development_guide  move_phase_flow_chart.dot  playing_guide  processProfile.rb  server.sql  system.sql  test.html  tests.lhs  todo
Games/Chaos2010/: ChaosTypes.lhs  Conf.lhs  DBUpdates.lhs  Database.hs  HaskellDBUtils.lhs  ThHdb.lhs  Utils.lhs
Games/Chaos2010/BoardWidget/: BoardWindow.lhs
Games/Chaos2010/ConcreteUI/: CUI.lhs
Games/Chaos2010/ConcreteUI/Gtk/: TextWidget.lhs
Games/Chaos2010/ConcreteUI/SDL/: BoardWindow.lhs
Games/Chaos2010/DBUI/Gtk/: GtkGUI.lhs  GtkUtils.lhs  Types.lhs
Games/Chaos2010/DBUI/SDL/: SDLGui.lhs
Games/Chaos2010/Database/: Action_client_new_game_argument.hs  Action_history_allegiance.hs  Action_history_colour_mr.hs  Action_history_mr.hs  Action_history_mr_base.hs  Action_history_num_wiz.hs  Action_history_piece.hs  Action_history_piece_source.hs  Action_history_piece_target.hs  Action_history_source.hs  Action_history_spell.hs  Action_history_spell_source.hs  Action_history_spell_target.hs  Action_history_target.hs  Action_history_turn_num.hs  Action_history_turn_phase.hs  Action_instructions.hs  Action_new_game_argument.hs  Activate_spells.hs  Adjacent_to_new_tree_squares.hs  Adjacent_to_tree_squares.hs  Ai_filtered_target_spells.hs  Ai_selected_piece_actions.hs  Ai_useful_spells.hs  All_database_objects.hs  All_module_objects.hs  Allegiance_colours.hs  Allegiances.hs  Attackable_pieces.hs  Attackable_prototypes.hs  Attackable_squares.hs  Attacking_pieces.hs  Attacking_prototypes.hs  Base_relvar_attributes.hs  Base_relvar_key_attributes.hs  Base_relvar_keys.hs  Base_relvar_metadata.hs  Base_relvars.hs  Board_beam_effects.hs  Board_highlights.hs  (+153 more)
Games/Chaos2010/GtkUI/: GtkGUI.lhs  GtkUtils.lhs  NewGUI.lhs  TextWidget.lhs  Types.lhs
Games/Chaos2010/Misc/: Logging.lhs  SetupUtils.lhs  ThreadingUtils.lhs
Games/Chaos2010/Tests/: AllTests.lhs  Autonomous.lhs  Basics.lhs  BoardUtils.lhs  Casting.lhs  Complete.lhs  MoveMisc.lhs  Phases.lhs  RelationalAlgebra.lhs  SetupGameState.lhs  SquaresValid.lhs  Subphases.lhs  TableValueTypes.lhs  TestUtils.lhs  Upgrades.lhs
Games/Chaos2010/UI/: ActionHistoryWidget.lhs  BoardUI.lhs  BoardWidget.lhs  ChaosTextView.lhs  ChaosUI.lhs  GtkUtils.lhs  HdbUtils.lhs  InfoWidget.lhs  NewGameWidget.lhs  NewInfoWidget.lhs  SoundLib.lhs  SpellBookWidget.lhs  UIThreadingUtils.lhs  UITypes.lhs
Games/Chaos2010/UI/old/: ActionHistoryWidget.lhs  NewGameWidget.lhs  SpellBookWidget.lhs  Widgets.lhs
docs/: move_phase_flow_chart.dot  playing_guide
libraries/dbui/Games/Chaos2010/DBUI/: UI.lhs
libraries/pglisten/: Listen.lhs  index.txt  listen1lib.c  listen1lib.h
new/: BoardSurface.lhs  EffectsTest.lhs  Gui.lhs  Input.lhs  Resources.lhs  ShowSprites.lhs  TestBoard.lhs  Utils.lhs  todo
old/: Chaos2010.lhs  Paths_Chaos2010.lhs
old/Games/Chaos2010/: Utils.lhs
old/Games/Chaos2010/Dbms/: ChaosDB.lhs  DBAdmin.lhs
old/Games/Chaos2010/Misc/: FileAdmin.lhs
old/Games/Chaos2010/Tests/: Tests.lhs
old/Games/Chaos2010/UI/: BoardWidget.lhs  DBTextView.lhs  MyTextView.lhs  SetupUI.lhs
sql/: server.sql  system.sql
sql/chaos/client/: BoardWidget.sql  ClientActions.sql  ClientNewGame.sql  NewGameWidget.sql  WizardDisplayInfo.sql
sql/chaos/server/: AI.sql  Actions.sql  Spells.sql  TestBoards.sql  TurnSequence.sql
sql/chaos/server/actions/: History.sql  MovePhase.sql  NextPhase.sql  SpellCast.sql  SquaresValid.sql
