Name:                chaos2010
Version:             0.0
Description:         turn based game with wizards and goblins
License:             BSD3
License-file:        LICENSE
Author:              Jake Wheat
Maintainer:          jakewheatblog@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2

data-files:          sql/client.sql,
                     sql/server.sql,
                     sql/system.sql,
                     data/sprites/objects/magic_fire.3.png,
                     data/sprites/objects/shadow_tree.4.png,
                     data/sprites/objects/gooey_blob.2.png,
                     data/sprites/objects/magic_fire.0.png,
                     data/sprites/objects/magic_tree.2.png,
                     data/sprites/objects/gooey_blob.0.png,
                     data/sprites/objects/dark_citadel.0.png,
                     data/sprites/objects/magic_tree.0.png,
                     data/sprites/objects/magic_tree.3.png,
                     data/sprites/objects/magic_castle.1.png,
                     data/sprites/objects/magic_tree.4.png,
                     data/sprites/objects/magic_tree.1.png,
                     data/sprites/objects/shadow_tree.1.png,
                     data/sprites/objects/dark_citadel.1.png,
                     data/sprites/objects/shadow_tree.3.png,
                     data/sprites/objects/gooey_blob.1.png,
                     data/sprites/objects/shadow_tree.2.png,
                     data/sprites/objects/magic_fire.1.png,
                     data/sprites/objects/magic_castle.0.png,
                     data/sprites/objects/magic_fire.2.png,
                     data/sprites/objects/shadow_tree.0.png,
                     data/sprites/objects/wall.0.png,
                     data/sprites/spells/chaos.0.png,
                     data/sprites/spells/law.0.png,
                     data/sprites/spells/vengeance.0.png,
                     data/sprites/spells/justice.0.png,
                     data/sprites/spells/turmoil.0.png,
                     data/sprites/spells/disbelieve.0.png,
                     data/sprites/spells/large_chaos.0.png,
                     data/sprites/spells/large_law.0.png,
                     data/sprites/spells/raise_dead.0.png,
                     data/sprites/spells/subversion.0.png,
                     data/sprites/spells/dark_power.0.png,
                     data/sprites/spells/lightning.0.png,
                     data/sprites/spells/magic_bolt.0.png,
                     data/sprites/spells/decree.0.png,
                     data/sprites/cursors/select_cursor.0.png,
                     data/sprites/cursors/cursor.0.png,
                     data/sprites/cursors/fly_cursor.0.png,
                     data/sprites/creatures/goblin.2.png,
                     data/sprites/creatures/hydra.0.png,
                     data/sprites/creatures/hydra.1.png,
                     data/sprites/creatures/dead_gryphon.0.png,
                     data/sprites/creatures/giant_rat.1.png,
                     data/sprites/creatures/harpy.2.png,
                     data/sprites/creatures/dead_lion.0.png,
                     data/sprites/creatures/faun.1.png,
                     data/sprites/creatures/king_cobra.2.png,
                     data/sprites/creatures/dire_wolf.1.png,
                     data/sprites/creatures/wraith.0.png,
                     data/sprites/creatures/ghost.1.png,
                     data/sprites/creatures/elf.2.png,
                     data/sprites/creatures/ogre.1.png,
                     data/sprites/creatures/dead_giant.0.png,
                     data/sprites/creatures/giant_rat.0.png,
                     data/sprites/creatures/dead_harpy.0.png,
                     data/sprites/creatures/bear.1.png,
                     data/sprites/creatures/dead_crocodile.0.png,
                     data/sprites/creatures/dead_horse.0.png,
                     data/sprites/creatures/gryphon.2.png,
                     data/sprites/creatures/dead_manticore.0.png,
                     data/sprites/creatures/goblin.1.png,
                     data/sprites/creatures/dead_faun.0.png,
                     data/sprites/creatures/horse.0.png,
                     data/sprites/creatures/pegasus.0.png,
                     data/sprites/creatures/dead_hydra.0.png,
                     data/sprites/creatures/dead_pegasus.0.png,
                     data/sprites/creatures/spectre.0.png,
                     data/sprites/creatures/king_cobra.0.png,
                     data/sprites/creatures/skeleton.1.png,
                     data/sprites/creatures/golden_dragon.2.png,
                     data/sprites/creatures/dead_orc.0.png,
                     data/sprites/creatures/red_dragon.0.png,
                     data/sprites/creatures/ghost.0.png,
                     data/sprites/creatures/crocodile.0.png,
                     data/sprites/creatures/pegasus.1.png,
                     data/sprites/creatures/ghost.2.png,
                     data/sprites/creatures/orc.1.png,
                     data/sprites/creatures/gorilla.0.png,
                     data/sprites/creatures/zombie.1.png,
                     data/sprites/creatures/giant.0.png,
                     data/sprites/creatures/centaur.1.png,
                     data/sprites/creatures/centaur.2.png,
                     data/sprites/creatures/centaur.0.png,
                     data/sprites/creatures/dead_ogre.0.png,
                     data/sprites/creatures/crocodile.2.png,
                     data/sprites/creatures/dead_bat.0.png,
                     data/sprites/creatures/zombie.0.png,
                     data/sprites/creatures/green_dragon.1.png,
                     data/sprites/creatures/dead_king_cobra.0.png,
                     data/sprites/creatures/dead_golden_dragon.0.png,
                     data/sprites/creatures/gryphon.1.png,
                     data/sprites/creatures/eagle.2.png,
                     data/sprites/creatures/dire_wolf.0.png,
                     data/sprites/creatures/spectre.2.png,
                     data/sprites/creatures/wraith.1.png,
                     data/sprites/creatures/gryphon.0.png,
                     data/sprites/creatures/golden_dragon.0.png,
                     data/sprites/creatures/red_dragon.2.png,
                     data/sprites/creatures/bat.2.png,
                     data/sprites/creatures/ogre.0.png,
                     data/sprites/creatures/hydra.2.png,
                     data/sprites/creatures/vampire.1.png,
                     data/sprites/creatures/horse.1.png,
                     data/sprites/creatures/bear.0.png,
                     data/sprites/creatures/bear.2.png,
                     data/sprites/creatures/dead_centaur.0.png,
                     data/sprites/creatures/harpy.1.png,
                     data/sprites/creatures/zombie.3.png,
                     data/sprites/creatures/unicorn.2.png,
                     data/sprites/creatures/elf.3.png,
                     data/sprites/creatures/manticore.1.png,
                     data/sprites/creatures/wraith.3.png,
                     data/sprites/creatures/eagle.1.png,
                     data/sprites/creatures/manticore.0.png,
                     data/sprites/creatures/goblin.0.png,
                     data/sprites/creatures/giant.1.png,
                     data/sprites/creatures/dead_unicorn.0.png,
                     data/sprites/creatures/skeleton.0.png,
                     data/sprites/creatures/faun.0.png,
                     data/sprites/creatures/dead_elf.0.png,
                     data/sprites/creatures/bat.1.png,
                     data/sprites/creatures/spectre.1.png,
                     data/sprites/creatures/vampire.0.png,
                     data/sprites/creatures/wraith.2.png,
                     data/sprites/creatures/crocodile.1.png,
                     data/sprites/creatures/faun.2.png,
                     data/sprites/creatures/eagle.0.png,
                     data/sprites/creatures/lion.0.png,
                     data/sprites/creatures/unicorn.0.png,
                     data/sprites/creatures/elf.0.png,
                     data/sprites/creatures/bat.0.png,
                     data/sprites/creatures/ogre.2.png,
                     data/sprites/creatures/orc.0.png,
                     data/sprites/creatures/golden_dragon.1.png,
                     data/sprites/creatures/elf.1.png,
                     data/sprites/creatures/dead_dire_wolf.0.png,
                     data/sprites/creatures/pegasus.2.png,
                     data/sprites/creatures/dead_gorilla.0.png,
                     data/sprites/creatures/orc.2.png,
                     data/sprites/creatures/lion.2.png,
                     data/sprites/creatures/red_dragon.1.png,
                     data/sprites/creatures/gorilla.2.png,
                     data/sprites/creatures/vampire.2.png,
                     data/sprites/creatures/giant_rat.2.png,
                     data/sprites/creatures/spectre.3.png,
                     data/sprites/creatures/green_dragon.0.png,
                     data/sprites/creatures/ghost.3.png,
                     data/sprites/creatures/king_cobra.1.png,
                     data/sprites/creatures/dead_bear.0.png,
                     data/sprites/creatures/skeleton.2.png,
                     data/sprites/creatures/manticore.2.png,
                     data/sprites/creatures/harpy.0.png,
                     data/sprites/creatures/zombie.2.png,
                     data/sprites/creatures/green_dragon.2.png,
                     data/sprites/creatures/dead_green_dragon.0.png,
                     data/sprites/creatures/horse.2.png,
                     data/sprites/creatures/giant.2.png,
                     data/sprites/creatures/dead_goblin.0.png,
                     data/sprites/creatures/dead_eagle.0.png,
                     data/sprites/creatures/unicorn.1.png,
                     data/sprites/creatures/lion.1.png,
                     data/sprites/creatures/dead_red_dragon.0.png,
                     data/sprites/creatures/gorilla.1.png,
                     data/sprites/creatures/dire_wolf.2.png,
                     data/sprites/creatures/dead_giant_rat.0.png,
                     data/sprites/effects/effect_attack.0.png,
                     data/sprites/highlights/highlight_attack.0.png,
                     data/sprites/highlights/highlight_select_piece_at_position.0.png,
                     data/sprites/highlights/highlight_walk.0.png,
                     data/sprites/highlights/highlight_fly.0.png,
                     data/sprites/highlights/highlight_ranged_attack.0.png,
                     data/sprites/highlights/highlight_cast_target_spell.0.png,
                     data/sprites/wizards/wizard_magic_wings_shadow.1.png,
                     data/sprites/wizards/wizard_magic_wings_shadow.3.png,
                     data/sprites/wizards/wizard_magic_shield_shadow.1.png,
                     data/sprites/wizards/wizard_magic_bow_shadow.2.png,
                     data/sprites/wizards/wizard_magic_shield.0.png,
                     data/sprites/wizards/wizard_magic_sword.0.png,
                     data/sprites/wizards/wizard_magic_bow.0.png,
                     data/sprites/wizards/wizard_magic_sword_shadow.3.png,
                     data/sprites/wizards/wizard_magic_sword.2.png,
                     data/sprites/wizards/wizard_magic_bow_shadow.7.png,
                     data/sprites/wizards/wizard_magic_wings.0.png,
                     data/sprites/wizards/wizard_magic_bow.2.png,
                     data/sprites/wizards/wizard_magic_knife.0.png,
                     data/sprites/wizards/wizard_magic_bow_shadow.0.png,
                     data/sprites/wizards/wizard_magic_sword.1.png,
                     data/sprites/wizards/wizard_magic_knife_shadow.0.png,
                     data/sprites/wizards/wizard5_shadow.1.png,
                     data/sprites/wizards/wizard3_shadow.0.png,
                     data/sprites/wizards/wizard3.0.png,
                     data/sprites/wizards/wizard4_shadow.1.png,
                     data/sprites/wizards/wizard_magic_sword_shadow.1.png,
                     data/sprites/wizards/wizard_magic_sword_shadow.5.png,
                     data/sprites/wizards/wizard_magic_wings.2.png,
                     data/sprites/wizards/wizard_magic_bow_shadow.5.png,
                     data/sprites/wizards/wizard_magic_bow_shadow.3.png,
                     data/sprites/wizards/wizard0_shadow.1.png,
                     data/sprites/wizards/wizard1_shadow.1.png,
                     data/sprites/wizards/wizard_magic_armour_shadow.0.png,
                     data/sprites/wizards/wizard_magic_sword_shadow.0.png,
                     data/sprites/wizards/wizard_magic_wings_shadow.5.png,
                     data/sprites/wizards/wizard_magic_knife.2.png,
                     data/sprites/wizards/wizard_magic_knife_shadow.5.png,
                     data/sprites/wizards/wizard1.0.png,
                     data/sprites/wizards/wizard4.0.png,
                     data/sprites/wizards/wizard7.0.png,
                     data/sprites/wizards/wizard_magic_sword_shadow.2.png,
                     data/sprites/wizards/wizard_magic_shield_shadow.0.png,
                     data/sprites/wizards/wizard7_shadow.0.png,
                     data/sprites/wizards/wizard_magic_bow_shadow.1.png,
                     data/sprites/wizards/wizard5_shadow.0.png,
                     data/sprites/wizards/wizard_magic_bow.3.png,
                     data/sprites/wizards/wizard1_shadow.0.png,
                     data/sprites/wizards/wizard5.0.png,
                     data/sprites/wizards/wizard_magic_knife.1.png,
                     data/sprites/wizards/wizard0.0.png,
                     data/sprites/wizards/wizard6_shadow.0.png,
                     data/sprites/wizards/wizard_magic_knife_shadow.4.png,
                     data/sprites/wizards/wizard0_shadow.0.png,
                     data/sprites/wizards/wizard_magic_bow_shadow.4.png,
                     data/sprites/wizards/wizard2.0.png,
                     data/sprites/wizards/wizard_magic_armour.0.png,
                     data/sprites/wizards/wizard_magic_wings.1.png,
                     data/sprites/wizards/wizard6.0.png,
                     data/sprites/wizards/wizard7_shadow.1.png,
                     data/sprites/wizards/wizard4_shadow.0.png,
                     data/sprites/wizards/wizard_magic_wings_shadow.0.png,
                     data/sprites/wizards/wizard_magic_knife_shadow.1.png,
                     data/sprites/wizards/wizard_magic_knife_shadow.2.png,
                     data/sprites/wizards/wizard_magic_bow.1.png,
                     data/sprites/wizards/wizard_magic_knife_shadow.3.png,
                     data/sprites/wizards/wizard_magic_wings_shadow.2.png,
                     data/sprites/wizards/wizard_magic_bow_shadow.6.png,
                     data/sprites/wizards/wizard2_shadow.0.png,
                     data/sprites/wizards/wizard_magic_wings_shadow.4.png,
                     data/sprites/wizards/wizard_magic_armour_shadow.1.png,
                     data/sprites/wizards/wizard6_shadow.1.png,
                     data/sprites/wizards/wizard2_shadow.1.png,
                     data/sprites/wizards/wizard_magic_sword_shadow.4.png,
                     data/sprites/wizards/wizard3_shadow.1.png,
                     data/sounds/*.ogg

extra-source-files:  README,
                     docs/development_guide,
                     todo

Executable chaos2010
  Main-is:           Chaos2010.lhs
  Build-Depends:     base,
                     containers,
                     old-time,
                     process,
                     directory,
                     filepath,

                     HDBC,
                     HDBC-postgresql,

                     hslogger,
                     fez-conf,

                     regexpr,
                     regex-posix,

                     QuickCheck,
                     HUnit,

                     gtk,
                     cairo,
                     SDL-mixer

  Other-Modules:     Paths_Chaos2010

-- Executable tests
--   Main-is:           tests.lhs
--   Build-Depends:     base,
--                      containers,
--                      old-time,
--                      process,
--                      directory,
--                      filepath,

--                      HDBC,
--                      HDBC-postgresql,

--                      hslogger,
--                      fez-conf,

--                      regex-posix,
--                      regexpr,

--                      QuickCheck,
--                      HUnit,
--                      test-framework,
--                      test-framework-hunit

